# mainframe

./: Makefile  pyproject.toml
examples/: api.py  client_tts.py  main.py
mainframe/: __init__.py
mainframe/client/: http.py
mainframe/core/: exceptions.py  msgpack.py
mainframe/server/: api.py
mainframepy/client/: docker.py  http.py
mainframepy/core/: encoders.py  msgpack.py  types.py
mainframepy/server/: api.py
