[tool.poetry]
name = "mainframepy"
version = "0.0.0"
description = "Barebones example app."
authors = ["Your Name <you@example.com>"]
license = "UNLICENSED"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
loguru = "^0.7.0"
docker = "^6.1.3"
fastapi = "^0.101.1"
pydantic = "^2.1.1"
httpx = "^0.24.1"
msgpack = "^1.0.5"
numpy = "^1.20"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
